# pigment64

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: maturin_upload_pypi.yml  python_bindings.yml  release.yml  rust.yml
src/: color.rs  format.rs  lib.rs  main.rs  utils.rs
src/cli/: binary.rs  defines.rs  macros.rs  mod.rs  png.rs
src/image/: mod.rs  native_image.rs  png_image.rs
tests/: color.rs  native_image.rs  png_image.rs  test.rs  test_python.py  word_swap.rs
