[package]
name = "pigment64"
version = "0.6.0"
edition = "2024"
description = "A library for handling conversion between N64 texture formats and modern image formats"
repository = "https://github.com/decompals/pigment64"
license = "MIT"
keywords = ["nintendo64", "texture", "conversion", "n64", "image"]
categories = ["multimedia", "encoding", "game-development"]
readme = "README.md"

[lib]
name = "pigment64"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pigment64_cli"
path = "src/main.rs"

[features]
python_bindings = ["dep:pyo3"]

[dependencies]
png = "0.17.16"
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
byteorder = "1.5.0"
num_enum = "0.7.4"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.15"

# Python bindings
pyo3 = { version="0.27.1", features = ["extension-module"], optional = true }

[dev-dependencies]
assert_cmd = "2.1.1"
