[project]
name = "pigment64"
# Version should be synced with lib/Cargo.toml and lib/pigment64/__init__.py
version = "0.6.2"
description = "A library for handling conversion between N64 texture formats and modern image formats"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Repository" = "https://github.com/decompals/pigment64"
"Bug Tracker" = "https://github.com/decompals/pigment64/issues"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "python_bindings"]
